Fix alignment of home link and navigation trigger

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -372,7 +372,6 @@ SECTION TITLE
   color: #aaa;
   display: flex;
   font-family: "ff-netto-web", Helvetica, Arial, sans-serif;
-  height: 20px;
   opacity: 0;
   padding: 10px;
   position: fixed;
